<resources>
    <string name="app_name">Loan Application</string>
    <string name="price">Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="loan_period">Loan Period (Year)</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="calculate">Calculate</string>
    <string name="error_input">Value required</string>
    <string name="reset">Reset</string>
    <string-array name="period">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>